force-app/main/default/objects/SML__Report_Access_Job__c/SML__Report_Access_Job__c.object-meta.xml
<CustomObject>
    <label>Report Access Job</label>
    <nameField>
        <label>reportAccessJob Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports Access Job</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>