force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__Converse_Campaign__c.field-meta.xml
<CustomField>
    <fullName>SML__Converse_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Converse Campaign</label>
    <referenceTo>SML__Converse_Campaign__c</referenceTo>
    <relationshipLabel>Reports_Access_Job</relationshipLabel>
    <relationshipName>Reports_Access_Job</relationshipName>
    <type>Lookup</type>
</CustomField>