force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__ID_Field__c.field-meta.xml
<CustomField>
    <fullName>SML__ID_Field__c</fullName>
    <label>Id</label>
    <length>244</length>
    <type>Text</type>
</CustomField>