force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__Job_Status__c.field-meta.xml
<CustomField>
    <fullName>SML__Job_Status__c</fullName>
    <label>Job_Status</label>
    <length>60</length>
    <type>Text</type>
</CustomField>