force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__Last_Id__c.field-meta.xml
<CustomField>
    <fullName>SML__Last_Id__c</fullName>
    <label>Last_Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>