force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__Report_Id__c.field-meta.xml
<CustomField>
    <fullName>SML__Report_Id__c</fullName>
    <label>Report_Id</label>
    <length>70</length>
    <type>Text</type>
</CustomField>