force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__Sent_Msg_Count__c.field-meta.xml
<CustomField>
    <fullName>SML__Sent_Msg_Count__c</fullName>
    <label>Sent Msg Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>