force-app/main/default/objects/SML__Report_Access_Job__c/fields/SML__Total_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>SML__Total_Records_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total_Records_Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>