force-app/main/default/objects/SML__Report_Access_Job__c/listViews/SML__All.listView-meta.xml
<ListView>
    <fullName>SML__All</fullName>
    <columns>NAME</columns>
    <columns>SML__Job_Status__c</columns>
    <columns>SML__Report_Id__c</columns>
    <columns>SML__Report_Instance_Id__c</columns>
    <columns>SML__Total_Records_Processed__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>SML__ID_Field__c</columns>
    <columns>SML__Last_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SML__Sent_Msg_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>